test/visibility/except/exceptModuleItself.good
exceptModuleItself.chpl:6: In function 'main':
exceptModuleItself.chpl:7: error: cannot use 'except' clause with symbol 'Toolbox' as it is not defined in 'Toolbox'
